Fixed header position on iphone 13

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,17 +23,16 @@ header
 
 nav{
     padding-top: 30px;
-    padding-left: 2%;
-    padding-right: 2%;
     display: flex;
     text-align: right;
     justify-content:center;
+    align-items: center;
 }
 
 nav ul li {
-    display: inline-block;
+    display: inline-flex;
     list-style-type: none;
-    padding: 15px 20px;
+    padding: 15px 15px;
     font-size: 11px;
 }
 nav ul li a{
